<resources>
    <string name="app_name">PlaylistMaker</string>
    <!--  Main menu activity  -->
    <string name="menu_title">Playlist maker</string>
    <string name="menu_search">Поиск</string>
    <string name="menu_library">Медиатека</string>
    <string name="menu_settings">Настройки</string>
    <!--  Settings activity  -->
    <string name="settings_theme">Темная тема</string>
    <string name="settings_share">Поделиться приложением</string>
    <string name="settings_support">Написать в поддержку</string>
    <string name="settings_license">Пользовательское соглашение</string>
    <!--    -->
    <string name="settings_mailAddress">deliremail@gmail.com</string>
    <string name="settings_mailSubject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="settings_mailText">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="settings_licenseAddress">https://yandex.ru/legal/practicum_offer/</string>
    <string name="settings_shareAddress">https://practicum.yandex.ru/learn/android-developer</string>

    <string name="search_error_emptyTrackList">Ничего не нашлось</string>
    <string name="search_error_connectionFailed">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>

    <string name="search_update">Обновить</string>
    <string name="search_history_title">Вы искали</string>
    <string name="search_history_clear">Очистить историю</string>

    <string name="testString">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="testTime">23:15</string>

    <string name="audioPlayer_duration">Длительность</string>
    <string name="audioPlayer_album">Альбом</string>
    <string name="audioPlayer_year">Год</string>
    <string name="audioPlayer_genre">Жанр</string>
    <string name="audioPlayer_country">Страна</string>
    <string name="audioPlayer_addToPlayLists">Добавить в плейлист</string>

    <string name="library_favoriteTracks">Избранные треки</string>
    <string name="library_playLists">Плейлисты</string>
    <string name="library_newPlayList">Новый плейлист</string>

    <string name="library_error_favoriteTracks">Ваша медиатека пуста</string>
    <string name="library_error_playLists">Вы не создали\nни одного плейлиста</string>

    <string name="playlist_title_create">Новый плейлист</string>
    <string name="playlist_name">Название *</string>
    <string name="playlist_description">Описание</string>
    <string name="playlist_create">Создать</string>
    <string name="playlist_edite">Сохранить</string>
    <string name="playlist_imageNotSelected">"Изображение не выбрано"</string>
    <string name="playlist_rationale">"Разрешение на доступ к хранилищу необходимо, чтобы указать изображение плейлиста"</string>
    <string name="playlist_created">"Плейлист %1$s создан"</string>
    <string name="playlist_noTracks">"В плейлисте нет треков"</string>


    <string name="playlist_confirmExit_title">"Завершить создание плейлиста?"</string>
    <string name="playlist_confirmExit_message">"Все несохраненные данные будут потеряны"</string>
    <string name="playlist_confirmExit_positiveButton">"Завершить"</string>
    <string name="playlist_confirmExit_negativeButton">"Отмена"</string>

    <string name="playlist_confirmDeleteTrack_message">"Хотите удалить трек?"</string>
    <string name="playlist_confirmDeleteTrack_positiveButton">"Да"</string>
    <string name="playlist_confirmDeleteTrack_negativeButton">"Нет"</string>

    <string name="playlist_confirmDeletePlaylist_message">"Хотите удалить плейлист?"</string>
    <string name="playlist_confirmDeletePlaylist_positiveButton">"Да"</string>
    <string name="playlist_confirmDeletePlaylist_negativeButton">"Нет"</string>

    <string name="playlist_menu_share">"Поделиться"</string>
    <string name="playlist_menu_edite">"Редактировать информацию"</string>
    <string name="playlist_menu_remove">"Удалить плейлист"</string>

    <string name="playlist_error_emptyPlaylist">"В этом плейлисте нет списка треков, которым можно поделиться"</string>

    <string name="addToPlaylist_success">"Добавлено в плейлист %1s"</string>
    <string name="addToPlaylist_alreadyContains">"Трек уже добавлен в плейлист %1s"</string>

</resources>