<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:orientation="vertical"
    android:theme="@style/Theme.PlaylistMaker"
    tools:context=".settings.presentation.SettingsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp">

        <TextView
            style="@style/ToolBarTextStyle"
            android:text="@string/menu_settings" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding"
        android:paddingRight="@dimen/settings_btn_right_padding">

        <Switch
            android:id="@+id/themeSwitcher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/settings_btn_margin"
            android:switchPadding="@dimen/settings_btn_image_margin_left"
            android:text="@string/settings_theme"
            android:textSize="@dimen/settings_btn_text_size" />

        <LinearLayout
            android:id="@+id/share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/SettingsTextViewStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/settings_share" />

            <ImageView
                style="@style/SettingsImageViewStyle"
                android:src="@drawable/ic_24x24_share" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/SettingsTextViewStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/settings_support" />

            <ImageView
                style="@style/SettingsImageViewStyle"
                android:src="@drawable/ic_24x24_support" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/license"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/SettingsTextViewStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/settings_license" />

            <ImageView
                style="@style/SettingsImageViewStyle"
                android:src="@drawable/ic_24x24_arrow_forward" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
