<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_title"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-medium"
        android:layout_gravity="left|center"
        android:layout_marginTop="14dp"
        android:layout_margin="@dimen/margin"
        android:textSize="@dimen/title_text_size"/>

    <Button
        android:id="@+id/menu_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="@dimen/margin"
        android:backgroundTint="@color/button_bg"
        android:text="@string/menu_search"
        android:textColor="@color/button_txt"
        android:textSize="@dimen/menu_btn_text_size"
        android:textAllCaps="false"
        android:fontFamily="sans-serif-medium"
        app:icon="@drawable/ic_24x24_search"
        app:iconGravity="textStart"
        app:iconTint="@color/button_txt"
        app:iconPadding="@dimen/menu_icon_padding"
        app:cornerRadius="@dimen/menu_btn_radius"/>

    <Button
        android:id="@+id/menu_library"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:backgroundTint="@color/button_bg"
        android:text="@string/menu_library"
        android:textColor="@color/button_txt"
        android:textSize="@dimen/menu_btn_text_size"
        android:textAllCaps="false"
        android:fontFamily="sans-serif-medium"
        app:icon="@drawable/ic_24x24_library"
        app:iconGravity="textStart"
        app:iconTint="@color/button_txt"
        app:iconPadding="@dimen/menu_icon_padding"
        app:cornerRadius="@dimen/menu_btn_radius"/>

    <Button
        android:id="@+id/menu_settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginBottom="28dp"
        android:backgroundTint="@color/button_bg"
        android:text="@string/menu_settings"
        android:textColor="@color/button_txt"
        android:textSize="@dimen/menu_btn_text_size"
        android:textAllCaps="false"
        android:fontFamily="sans-serif-medium"
        app:icon="@drawable/ic_24x24_settings"
        app:iconGravity="textStart"
        app:iconTint="@color/button_txt"
        app:iconPadding="@dimen/menu_icon_padding"
        app:cornerRadius="@dimen/menu_btn_radius"/>

</LinearLayout>