<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_height="@dimen/title_height"
        android:layout_marginBottom="@dimen/title_bottom_margin">
        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:src="@drawable/arrow_back"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/menu_settings"
            android:textColor="@color/button_txt"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:textSize="@dimen/title_text_size"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_btn_height"
            android:backgroundTint="@color/white"
            android:padding="@dimen/padding">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/settings_theme"
                android:textColor="@color/button_txt"
                android:gravity="center_vertical"
                android:textSize="@dimen/settings_btn_text_size"/>
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="right"
                android:layout_gravity="center_vertical|right"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_btn_height"
            android:backgroundTint="@color/white"
            android:padding="@dimen/padding">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/settings_share"
                android:textColor="@color/button_txt"
                android:gravity="center_vertical"
                android:textSize="@dimen/settings_btn_text_size"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/share"
                android:layout_gravity="center_vertical|right"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_btn_height"
            android:backgroundTint="@color/white"
            android:padding="@dimen/padding">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/settings_support"
                android:textColor="@color/button_txt"
                android:gravity="center_vertical"
                android:textSize="@dimen/settings_btn_text_size"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/support"
                android:layout_gravity="center_vertical|right"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_btn_height"
            android:backgroundTint="@color/white"
            android:padding="@dimen/padding">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/settings_license"
                android:textColor="@color/button_txt"
                android:gravity="center_vertical"
                android:textSize="@dimen/settings_btn_text_size"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_forward"
                android:layout_gravity="center_vertical|right"/>
        </FrameLayout>
    </LinearLayout>

</LinearLayout>
