<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".playlist.presentation.PlaylistFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolBarButtonStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_24x24_arrow_back">

        <TextView
            style="@style/ToolBarTextStyle"
            android:text="@string/playlist_title_create" />

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/artwork"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="26dp"
        android:layout_marginHorizontal="@dimen/playlist_artworkMargins"
        android:background="@drawable/playlist_artwork_placeholder"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlistNameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/playlist_name"
        app:hintEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/artwork"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="@dimen/playlist_controlMargins">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlistName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/playlistDescriptionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/playlist_description"
        app:hintEnabled="true"
        app:hintTextColor="@color/YP_blue"
        app:layout_constraintTop_toBottomOf="@id/playlistNameLayout"
        android:layout_marginTop="@dimen/playlist_controlMargins"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="@dimen/playlist_controlMargins">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlistDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createPlaylist"
        style="@style/PlaylistButtonTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/YP_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginVertical="32dp"
        android:layout_marginHorizontal="@dimen/playlist_controlMargins"
        android:text="@string/playlist_create"
        android:background="@drawable/button_background"/>
</androidx.constraintlayout.widget.ConstraintLayout>