<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/backgroundColor"
        tools:context=".player.presentation.PlayerFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/ToolBarButtonStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_24x24_arrow_back">

        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightImageBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftImageBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <ImageView
            android:id="@+id/artwork"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="26dp"
            android:background="@drawable/placeholder"
            app:layout_constraintBottom_toTopOf="@id/trackName"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@id/rightImageBorder"
            app:layout_constraintStart_toStartOf="@id/leftImageBorder"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <TextView
            android:id="@+id/trackName"
            style="@style/TrackMainInfo.TrackName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@id/rightImageBorder"
            app:layout_constraintStart_toStartOf="@id/leftImageBorder"
            app:layout_constraintTop_toBottomOf="@id/artwork"
            tools:text="Yesterday (Remastered 2009)" />

        <TextView
            android:id="@+id/artistName"
            style="@style/TrackMainInfo.ArtistName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="@id/rightImageBorder"
            app:layout_constraintStart_toStartOf="@id/leftImageBorder"
            app:layout_constraintTop_toBottomOf="@id/trackName"
            tools:text="The Beatles" />

        <FrameLayout
            android:id="@+id/controls"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@id/rightImageBorder"
            app:layout_constraintStart_toStartOf="@id/leftImageBorder"
            app:layout_constraintTop_toBottomOf="@id/artistName">

            <ImageButton
                android:id="@+id/addToPlaylistButton"
                android:layout_width="51dp"
                android:layout_height="51dp"
                android:layout_gravity="center_vertical|start"
                android:background="@drawable/round_button"
                android:backgroundTint="?attr/grayControlsBackgroundColor"
                android:src="@drawable/ic_24x24_add_to_playlist"
                app:tint="@color/YP_white" />

            <av.kochekov.playlistmaker.player.presentation.custom_ui.PlaybackButtonView
                android:id="@+id/playButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                />

            <ImageButton
                android:id="@+id/addToFavoriteButton"
                android:layout_width="51dp"
                android:layout_height="51dp"
                android:layout_gravity="center_vertical|end"
                android:background="@drawable/round_button"
                android:backgroundTint="?attr/grayControlsBackgroundColor"
                android:src="@drawable/ic_not_favorite" />
        </FrameLayout>

        <TextView
            android:id="@+id/trackTime"
            style="@style/TrackMainInfo.TrackTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="00:30"
            app:layout_constraintEnd_toEndOf="@id/rightImageBorder"
            app:layout_constraintStart_toStartOf="@id/leftImageBorder"
            app:layout_constraintTop_toBottomOf="@id/controls" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightTextBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftTextBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/duration_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:paddingTop="@dimen/audioPlayer_topPadding"
            android:paddingBottom="@dimen/audioPlayer_bottomPadding"
            app:layout_constraintEnd_toEndOf="@id/rightTextBorder"
            app:layout_constraintStart_toStartOf="@id/leftTextBorder"
            app:layout_constraintTop_toBottomOf="@id/trackTime">

            <TextView
                style="@style/TrackAdditionalInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/audioPlayer_duration"
                android:textColor="@color/YP_text_gray" />

            <TextView
                android:id="@+id/duration"
                style="@style/TrackAdditionalInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:ellipsize="end"
                android:gravity="end"
                android:lines="1"
                tools:text="@string/testString" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/album_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/audioPlayer_topPadding"
            android:paddingBottom="@dimen/audioPlayer_bottomPadding"
            app:layout_constraintEnd_toEndOf="@id/rightTextBorder"
            app:layout_constraintStart_toStartOf="@id/leftTextBorder"
            app:layout_constraintTop_toBottomOf="@id/duration_layout">

            <TextView
                style="@style/TrackAdditionalInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/audioPlayer_album"
                android:textColor="@color/YP_text_gray" />

            <TextView
                android:id="@+id/album"
                style="@style/TrackAdditionalInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:ellipsize="end"
                android:gravity="end"
                android:lines="1"
                tools:text="@string/testString" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/release_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/audioPlayer_topPadding"
            android:paddingBottom="@dimen/audioPlayer_bottomPadding"
            app:layout_constraintEnd_toEndOf="@id/rightTextBorder"
            app:layout_constraintStart_toStartOf="@id/leftTextBorder"
            app:layout_constraintTop_toBottomOf="@id/album_layout">

            <TextView
                style="@style/TrackAdditionalInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/audioPlayer_year"
                android:textColor="@color/YP_text_gray" />

            <TextView
                android:id="@+id/release"
                style="@style/TrackAdditionalInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:ellipsize="end"
                android:gravity="end"
                android:lines="1"
                tools:text="@string/testString" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/genre_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/audioPlayer_topPadding"
            android:paddingBottom="@dimen/audioPlayer_bottomPadding"
            app:layout_constraintEnd_toEndOf="@id/rightTextBorder"
            app:layout_constraintStart_toStartOf="@id/leftTextBorder"
            app:layout_constraintTop_toBottomOf="@id/release_layout">

            <TextView
                style="@style/TrackAdditionalInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/audioPlayer_genre"
                android:textColor="@color/YP_text_gray" />

            <TextView
                android:id="@+id/genre"
                style="@style/TrackAdditionalInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:ellipsize="end"
                android:gravity="end"
                android:lines="1"
                tools:text="@string/testString" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/country_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/audioPlayer_topPadding"
            android:paddingBottom="@dimen/audioPlayer_bottomPadding"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/rightTextBorder"
            app:layout_constraintStart_toStartOf="@id/leftTextBorder"
            app:layout_constraintTop_toBottomOf="@id/genre_layout">

            <TextView
                style="@style/TrackAdditionalInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/audioPlayer_country"
                android:textColor="@color/YP_text_gray" />

            <TextView
                android:id="@+id/country"
                style="@style/TrackAdditionalInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginBottom="20dp"
                android:ellipsize="end"
                android:gravity="end"
                android:lines="1"
                tools:text="@string/testString" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/player_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_bottom_sheet"
        android:backgroundTint="?attr/backgroundColor"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        tools:visibility="gone"
        app:behavior_hideable="true"
        app:behavior_peekHeight="550dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_dash" />

        <TextView
            style="@style/ErrorPlaceholderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:gravity="center_horizontal"
            android:text="@string/audioPlayer_addToPlayLists"
            android:visibility="visible" />

        <Button
            android:id="@+id/new_playlist_button"
            style="@style/RoundedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="28dp"
            android:text="@string/library_newPlayList" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/player_playlist_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:reverseLayout="false"
            tools:listitem="@layout/playlist_list_item" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>